# FLR-for-SIEM-analytics

./: .gitignore  README.md  pyproject.toml  requirements.txt  results.md  technical-report.md
examples/: orgA_groundtruth.csv  orgA_logs.csv  orgB_groundtruth.csv  orgB_logs.csv  orgC_groundtruth.csv  orgC_logs.csv
federated_lr_pipeline/: __init__.py  config.py  data.py  ensemble.py  feature_schemas.py  local_training.py  metrics.py  model.py  prf.py  run.py  specialized_models.py  testing.py  utils.py  vocab.py
ioc_generation/: __init__.py  correlate.py  extractors.py  normalize.py  run.py  stix.py  utils.py
misc/: compare_ioc_stix.py  generate_comparison_report.py  split_into_orgs.py
tests/: test_data.py  test_ensemble.py  test_ioc_extractors.py  test_ioc_generation_pipeline.py  test_model_training.py  test_pipeline_split_metrics.py  test_prf.py  test_specialized_aggregation.py  test_specialized_features.py  test_specialized_vocab.py  test_stix_generation.py  test_testing_mode.py  test_vocab.py
