[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "federated-log-regression-prototype"
version = "0.1.0"
description = "Privacy-preserving federated logistic regression research prototype for organization logs"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "scipy>=1.10",
  "tqdm>=4.64",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["federated_lr_pipeline*", "ioc_generation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
